@@ -1568,3 +1568,5 @@ ATS V1.5:
     YARN-4844. Add getMemorySize/getVirtualCoresSize to o.a.h.y.api.records.Resource. (wangda)
 
     BUG-59397. HDFS-10485. Fix findbugs warning in FSEditLog.java (Akira AJISAKA)
+
+    BUG-50479. HADOOP-11252. RPC client does not time out by default (Masatake Iwasaki)
